--- a/src/main/resources/Frontend/FrontBillet.fxml
+++ b/src/main/resources/Frontend/FrontBillet.fxml
@@ -36,8 +36,9 @@
 
                 <!-- Menu interactif -->
                 <HBox fx:id="navBar" spacing="20.0" style="-fx-alignment: center; -fx-padding: 0 20px; -fx-margin-left: auto;">
-                    <Button fx:id="btnAccueil" text="🏠 Accueil" onAction="#goToAcceuil" style="-fx-background-color: transparent; -fx-text-fill: #F39C12; -fx-border-radius: 10px; -fx-padding: 10px 18px;"/>
-                    <Button fx:id="btnEvenements" text="📅 Événements" style="-fx-background-color: transparent; -fx-text-fill: #F39C12; -fx-border-radius: 10px; -fx-padding: 10px 18px;"/>
+                    <Button fx:id="btnAccueil" onAction="#goToAcceuil" text="🏠 Accueil" style="-fx-background-color: transparent; -fx-text-fill: #F39C12; -fx-border-radius: 10px; -fx-padding: 10px 18px;"/>
+                    <Button fx:id="btnEvenements" onAction="#goToEvents" text="📅 Événements"  style="-fx-background-color: transparent; -fx-text-fill: #F39C12; -fx-border-radius: 10px; -fx-padding: 10px 18px;"/>
+                    <Button fx:id="btnEspace" onAction="#goToEspaces" text="📌 Espaces"  style="-fx-background-color: transparent; -fx-text-fill: #F39C12; -fx-border-radius: 10px; -fx-padding: 10px 18px;"/>
                 </HBox>
             </children>
         </HBox>
