--- a/src/main/resources/FrontAcceuil.fxml
+++ b/src/main/resources/FrontAcceuil.fxml
@@ -37,15 +37,16 @@
                     <Button fx:id="1" style="-fx-background-color: transparent; -fx-text-fill: #F39C12; -fx-border-radius: 10px; -fx-padding: 10px 18px;"/>
                 </HBox>
 
-                <!-- Icônes à l'extrême droite -->
-                <HBox spacing="15.0" style="-fx-alignment: right; -fx-margin-left: auto;">
-
-                    <ImageView fx:id="profileIcon" fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
-                        <image>
-                            <Image url="/images/profile.png"/>
-                        </image>
-                    </ImageView>
-                </HBox>
+                <!-- 🚀 Icône Déconnexion -->
+                <Button fx:id="btnLogout" onAction="#handleLogout" style="-fx-background-color: transparent; -fx-padding: 0;">
+                    <graphic>
+                        <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
+                            <image>
+                                <Image url="/images/logout.png"/>
+                            </image>
+                        </ImageView>
+                    </graphic>
+                </Button>
             </children>
         </HBox>
 
