--- a/templates/billet/index.html.twig
+++ b/templates/billet/index.html.twig
@@ -13,6 +13,14 @@
       </div>
     </div>
   </div>
+  {# Bouton Send Message #}
+    <div class="row mb-4" style="padding-top: 10px;">
+      <div class="col-lg-12 text-center">
+        <a href="{{path('app_billet_new')}}" class="main-button custom-message-btn">
+          <i></i> Créer billet
+        </a>
+      </div>
+    </div>
 
     <h1>Billet index</h1>
 
