--- a/templates/event/index.html.twig
+++ b/templates/event/index.html.twig
@@ -7,7 +7,7 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-12">
-        <span class="breadcrumb"><a href="#">Accueil</a> / Évènements</span>
+        <span class="breadcrumb"><a href="{{path('app_home')}}">Accueil</a> / Évènements</span>
         <h3>Évènements</h3>
       </div>
     </div>
@@ -20,7 +20,7 @@
     {# Bouton Send Message #}
     <div class="row mb-4">
       <div class="col-lg-12 text-center">
-        <a href="#contact-form" class="main-button custom-message-btn">
+        <a href="{{path('app_event_new')}}" class="main-button custom-message-btn">
           <i></i> Créer évènement
         </a>
       </div>
