--- a/templates/event/new.html.twig
+++ b/templates/event/new.html.twig
@@ -10,7 +10,7 @@
         <div class="card-body p-5">
           <h2 class="mb-4 text-center">Create a New Event</h2>
 
-          {{ form_start(form, {'attr': {'class': 'needs-validation'}}) }}
+          {{ form_start(form, {'attr': {'novalidate': 'novalidate'}}) }}
 
           <div class="mb-3">
             {{ form_label(form.nomEvent, null, {'label_attr': {'class': 'form-label'}}) }}
