--- a/templates/event/index.html.twig
+++ b/templates/event/index.html.twig
@@ -32,7 +32,8 @@
         <div class="col-lg-4 col-md-6 align-self-center mb-30 properties-items">
           <div class="item">
             <a href="{{ path('app_event_show', {'idEvent': event.idEvent}) }}">
-              <img src="{{ asset('uploads/images/' ~ event.image) }}" alt="">
+              <img src="{{ asset('uploads/' ~ event.image) }}" alt="">
+
             </a>
             <span class="category">{{ event.nomEspace }}</span>
             <h6>{{ event.prix }} Dt</h6>
